ncc/testsuite/positive/method-override-base-enforcement.n

module Program
{
  Main() : void
  {
    def x = C();
    x.foo();
  }
}


class A[T] {
  public virtual foo () : void {
    System.Console.WriteLine ("a");
  }
}

class B : A[object]{
  public override foo () : void {
    base.foo ();
    System.Console.WriteLine ("b");
  }
}

class C : B {
  public override foo () : void {
    (base : A[object]).foo ();
    
    System.Console.WriteLine ("c");
  }
}

/*
BEGIN-OUTPUT
a
c
END-OUTPUT
*/