ncc/testsuite/negative/void-type-parm.n
public class A['a]
{
}

public class B
{
    x : A[System.Void]; // E: cannot use `void' as a generic parameter
    
   public F() : void
   {
   
   }
}
